@@ -1,6 +1,12 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
 
 {{$NEXT}}
+ [00 Trivial]
+ - Dislike copyrights without an email address
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.003001, see misc/*.deps* for details
+ - test: (recommends: ↑1)
 
 0.003001 2014-08-30T11:09:05Z
  [00 Trivial]
